test/testData/highlight/errors/syntax/let.ml
let
(*
File "let.ml", line 1, characters 3-3:
Error: Syntax error
*)